plugins {
    id 'com.gradleup.shadow' version '9.4.2' apply false
    id 'org.jetbrains.kotlin.jvm' version '2.4.0' apply false
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.21' apply false
    id 'xyz.jpenilla.run-paper' version '3.0.2' apply false
}

project(':Core') {
    apply plugin: 'java'
    apply plugin: 'org.jetbrains.kotlin.jvm'
    apply plugin: 'com.gradleup.shadow'
    apply plugin: 'io.papermc.paperweight.userdev'
    apply plugin: 'xyz.jpenilla.run-paper'

    group = 'com.github.TheDiVaZo.MessageOverHead'
    version = '4.0.0-alpha'

    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://maven.pkg.github.com/LoneDev6/API-ItemsAdder' }
        maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
        maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
        maven { url 'https://oss.sonatype.org/content/repositories/central' }
        maven { url 'https://repo.dmulloy2.net/repository/public/' }
        maven { url 'https://jitpack.io' }
        maven { url 'https://repo.aikar.co/content/groups/aikar/' }
        maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(17)
    }

    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
        compilerOptions {
            jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17)
            javaParameters.set(true)
        }
    }

    tasks.named('compileJava', JavaCompile) {
        options.compilerArgs += ['-parameters']
        options.debug = true
        options.debugOptions.debugLevel = 'source,lines,vars'
    }

    tasks.named('javadoc', Javadoc) {
        options.encoding = 'UTF-8'
    }

    dependencies {
        implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.4.0'

        paperweight.paperDevBundle('1.19.1-R0.1-SNAPSHOT')
        implementation 'it.unimi.dsi:fastutil:8.5.18'
        implementation 'org.incendo:cloud-paper:2.0.0-beta.16'

        compileOnly 'net.dmulloy2:ProtocolLib:5.4.0'

        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testCompileOnly 'org.projectlombok:lombok:1.18.46'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'
    }

    jar {
        archiveBaseName.set(rootProject.name)
    }

    shadowJar {
        archiveBaseName.set(rootProject.name)
        minimize()
        relocate("it.unimi.dsi", "me.thedivazo.messageoverhead.libs.it.unimi.dsi")
        relocate 'org.incendo', 'me.thedivazo.messageoverhead.libs.org.incendo'
    }

    runServer {
        minecraftVersion('1.19.1')

        downloadPlugins {
            url('https://github.com/dmulloy2/ProtocolLib/releases/download/5.4.0/ProtocolLib.jar')
        }
    }

    test {
        useJUnitPlatform()
    }
}
